[gd_scene load_steps=18 format=3 uid="uid://r885hmnubc6o"]

[ext_resource type="PackedScene" uid="uid://bjmfaw432i8kw" path="res://Spark.tscn" id="1_3g2b2"]
[ext_resource type="Script" path="res://scripts/Boss2.gd" id="1_wwpcx"]
[ext_resource type="PackedScene" uid="uid://bx1m47ro2e150" path="res://Bulletcircle.tscn" id="3_kfc2h"]
[ext_resource type="PackedScene" uid="uid://d3nngbjfswteu" path="res://Teleport.tscn" id="4_76p4s"]
[ext_resource type="PackedScene" uid="uid://d3pd7hakaer4d" path="res://Boss2bullet.tscn" id="4_ikkfd"]
[ext_resource type="PackedScene" uid="uid://blfh21paqm1mx" path="res://Healthbar.tscn" id="4_vsmk5"]
[ext_resource type="PackedScene" uid="uid://bj23l42rws8ai" path="res://Boss2bullet2.tscn" id="5_xnkg3"]
[ext_resource type="PackedScene" uid="uid://bpemhh5wfb7ow" path="res://Portal.tscn" id="7_6ify6"]
[ext_resource type="Texture2D" uid="uid://cpst3r5ixpdbt" path="res://assets/New_Piskel_1-ezgif.com-gif-to-sprite-converter.png" id="8_fp7n0"]
[ext_resource type="FontFile" uid="uid://cfqhh4yntr6j2" path="res://Facon.ttf" id="10_qtroc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ioo3"]
radius = 4.00125

[sub_resource type="AtlasTexture" id="AtlasTexture_b73sy"]
atlas = ExtResource("8_fp7n0")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_my28l"]
atlas = ExtResource("8_fp7n0")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_36jd6"]
atlas = ExtResource("8_fp7n0")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2msa0"]
atlas = ExtResource("8_fp7n0")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8ps8"]
atlas = ExtResource("8_fp7n0")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_xnvva"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b73sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my28l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36jd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2msa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8ps8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Bossbody2" type="CharacterBody2D" node_paths=PackedStringArray("firetimer")]
script = ExtResource("1_wwpcx")
megabullet_scene = ExtResource("1_3g2b2")
bullet_scene = ExtResource("3_kfc2h")
bullethell_scene = ExtResource("4_ikkfd")
bullethell2_scene = ExtResource("5_xnkg3")
teleport_scene = ExtResource("4_76p4s")
firetimer = NodePath("CollisionShape2D/Firetimer")
portal_scene = ExtResource("7_6ify6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4ioo3")
metadata/Boss = true

[node name="Firetimer" type="Timer" parent="CollisionShape2D"]
wait_time = 1.5

[node name="Weaktimer" type="Timer" parent="CollisionShape2D"]
wait_time = 0.6
one_shot = true

[node name="Boss_bullet_spawn" type="Node2D" parent="CollisionShape2D"]

[node name="Area2D2" type="Area2D" parent="CollisionShape2D"]
scale = Vector2(10, 10)
metadata/Boss = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/Area2D2"]
shape = SubResource("CircleShape2D_4ioo3")
metadata/Boss = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
position = Vector2(-1.90735e-06, -1.90735e-06)
scale = Vector2(0.324219, 0.324219)
sprite_frames = SubResource("SpriteFrames_xnvva")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Healthbar" parent="CanvasLayer" instance=ExtResource("4_vsmk5")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.5
offset_top = -16.0
offset_right = 350.5
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = true
metadata/_edit_use_anchors_ = true

[node name="Bosslabel" type="Label" parent="CanvasLayer/Healthbar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -29.0
offset_right = 37.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_qtroc")
theme_override_font_sizes/font_size = 25
text = "ZEUS"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.0
offset_top = -50.0
offset_right = 297.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_qtroc")
theme_override_font_sizes/font_size = 100
text = "GOD SLAIN"
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 3.0
one_shot = true

[node name="Timer2" type="Timer" parent="CanvasLayer"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="CollisionShape2D/Firetimer" to="." method="_on_firetimer_timeout"]
[connection signal="timeout" from="CollisionShape2D/Weaktimer" to="." method="_on_weaktimer_timeout"]
[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/Timer2" to="." method="_on_timer_2_timeout"]
